More work on SDK presentation.

--- a/scripts/slideshow_template.html
+++ b/scripts/slideshow_template.html
@@ -3,6 +3,8 @@
   <head>
     <title>${title}</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css"
+      href="https://fonts.googleapis.com/css?family=Oxygen">
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
