I think the sed script in the commit message caused the travis ci's brain to melt. Let's see

--- a/planemo_ext/welcome.html
+++ b/planemo_ext/welcome.html
@@ -9,7 +9,7 @@
     <div class="jumbotron">
         <div class="container">
             <table><tr><td>
-            <h4>Hello, your <strong>ToolFactory in Planemo</strong> Galaxy is running!</h4>
+            <h4>Hello, your <strong>ToolFactory in Planemo</strong> is running!</h4>
             <ul>
                 <li><a href="https://github.com/fubar2/toolfactory/blob/master/README.md" target="_blank">ToolFactory README</a></br></li>
                 <li><a href="https://drive.google.com/file/d/1xpkcVGQ0jRdG78Kt-qLwqeFpE3RnSRsK/view?usp=sharing" target="_blank" >Hello ToolFactory video demonstration</a> </li>
