update zenodo link in welcome.html for toolfactory use

--- a/planemo_ext/welcome.html
+++ b/planemo_ext/welcome.html
@@ -16,8 +16,8 @@
             </ul>
             <font size="4" color="darkblue">Loading the ToolFactory sample history</font></br>
             <ol>
-            <li>Use this URL: <b>https://zenodo.org/record/4678033/files/TFdemo_planemo_april10.tar.gz?download=1</b></li>
-            <li>Try this older one if the above fails: <b>https://zenodo.org/record/4661849/files/TFdemo_history_april_4.tar.gz?download=1</b></li>
+            <li>Use this URL: <b>https://zenodo.org/record/4686436/files/TF_demo_planemo_april14.tar.gz?download=1</b></li>
+            <li>This older one may be helpful if the above fails: <b>https://zenodo.org/record/4661849/files/TFdemo_history_april_4.tar.gz?download=1</b></li>
             <li>Select the "User" tab of the top bar; Select Histories; Select Import; Paste that URL into the History import upload box</li>
             <li>Switch to the imported history for sample ToolFactory jobs to illustrate some of the kinds of tools and features. </li>
             </ol>
